Fix alignment inside items

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -23,7 +23,6 @@
   display: block;
   height: 100%;
   position: relative;
-  cursor: pointer;
 
   &__image {
     max-width: 130px;
